--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@ author_profile: true
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    {% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include analytics.html %}
+    {% endif %}
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
