Format post publishing date

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ classes: wide
 author_profile: true
 ---
 
-Published on {{ page.date }}
+<small>This post was published on {{ page.date | date: "%B %-d, %Y" }}</small>
 
 {{ content }}
 
